# minunit

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  TODO.md  config.h.cmake
cmake/Modules/: Findmodelcheck.cmake
examples/: CMakeLists.txt
examples/minmax/: CMakeLists.txt
examples/minmax/src/: max.c  min.c  minmax.h
examples/minmax/test/: test_max.cpp  test_min.cpp
include/minunit/: internal.h  list.h  minunit.h
model-check/: CMakeLists.txt  check_list.c
src/: minunit_list.c  minunit_runner.cpp
